--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
+  "scripts": {
+    "start": "node sever.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "argon2": "^0.31.0",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.2",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
