--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER =  abhilasha
-DB_PASSWORD =  password
+DB_USER =  postgres
+DB_PASSWORD =  Gauharkhan_1
 DB_HOST = localhost
 DB_DATABASE = unologin
 DB_PORT =  5432
